# cursor-icon-reader

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build-and-test.yml
src/: main.rs
