[package]
name = "cir"
version = "1.0.0"
description = "A simple utility to format CUR and ICO files data into a human-readable format."
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
