[package]
name = "cursor-icon-reader"
version = "1.0.0"
description = "Formats CUR and ICO files data into a human-readable format."
authors = ["Mark Pokhil <vfhr.afr@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[[bin]]
name = "cir"
path = "src/main.rs"

[profile.release]
panic='abort'
opt-level=3

[dependencies]
byteorder = "1.4.3"
